# lemongrab

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bot.cpp  bot.h  build-in-docker.sh  config.ini.default  config.toml.default  lemongrab.pro  main.cpp  settings.cpp  settings.h  update.sh  xmpphandler.cpp
cmake/: ClangTidy.cmake  FindCppToml.cmake  FindGlog.cmake  FindGloox.cmake  FindHexicord.cmake  FindJsonCpp.cmake  FindLevelDB.cmake  FindLibEvent.cmake  FindPugiXML.cmake
handlers/: diceroller.cpp  diceroller.h  lastseen.cpp  leaguelookup.cpp  leaguelookup.h  lemonhandler.cpp  lemonhandler.h  urlpreview.cpp
src/: bot.cpp  bot.h  cliclient.cpp  cliclient.h  datastorage.cpp  datastorage.h  glooxclient.cpp  glooxclient.h  main.cpp  settings.cpp  settings.h  xmppclient.h  xmpphandler.cpp  xmpphandler.h
src/handlers/: diceroller.cpp  diceroller.h  discord.cpp  discord.h  githubwebhooks.cpp  githubwebhooks.h  goodenough.cpp  goodenough.h  goshamer.cpp  goshamer.h  lastseen.cpp  lastseen.h  lasturls.cpp  lasturls.h  leaguelookup.cpp  leaguelookup.h  lemonhandler.cpp  lemonhandler.h  pager.cpp  pager.h  quotes.cpp  quotes.h  rss.cpp  rss.h  statusreporter.cpp  statusreporter.h  ts3.cpp  ts3.h  urlpreview.cpp  urlpreview.h  vote.cpp  vote.h  warframe.cpp  warframe.h
src/handlers/util/: calc.cpp  calc.h  curlhelper.cpp  curlhelper.h  github_webhook_formatter.cpp  github_webhook_formatter.h  persistentmap.cpp  persistentmap.h  sqlite_db.h  stringops.cpp  stringops.h  thread_util.cpp  thread_util.h
test/: config.toml.test  dev_now.rss  getSpectatorGameInfo.json  issue.json  release.json  steam.html  summonerByName.json  youtube.html
travis/: 0001-sqliteorm-escape-update.patch  install_all.sh  install_cmake.sh  install_cpptoml.sh  install_cpr.sh  install_hexicord.sh  install_jsoncpp.sh  install_pugixml.sh  install_sqlite_orm.sh
